--- a/src/components/Navbar/_MobileStyle.scss
+++ b/src/components/Navbar/_MobileStyle.scss
@@ -6,7 +6,6 @@
   bottom: 0;
   left: 0;
   z-index: 11;
-  width: 100%;
   height: 100vh;
   backdrop-filter: blur(2px);
   .nav {
